added all files

--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@ MAILTRAP_TOKEN = 70c5897846d888e29d1846fd4e4f8da7
 MAILTRAP_ENDPOINT = send.api.mailtrap.io
 
 CLIENT_URL = http://localhost:5173
+node_modules
 
 # invalid date issue
